--- a/.github/workflows/ui-tests-e2e.yml
+++ b/.github/workflows/ui-tests-e2e.yml
@@ -36,16 +36,17 @@ jobs:
           pattern: build-*-container
           merge-multiple: true
 
-      - name: Load `gateway` and `ui` containers
+      - name: Load `gateway`, `ui`, and `mock-inference-provider` containers
         run: |
           docker load < gateway-container.tar
           docker load < ui-container.tar
+          docker load < mock-inference-provider-container.tar
 
       # This allows us to use 'no-build' on subsequent steps
       - name: Build needed docker images
         working-directory: ui
         run: |
-          docker compose -f fixtures/docker-compose.e2e.yml -f fixtures/docker-compose.ui.yml build fixtures mock-inference-provider
+          docker compose -f fixtures/docker-compose.e2e.yml -f fixtures/docker-compose.ui.yml build fixtures
 
       - name: Start docker containers without external network access
         working-directory: ui
@@ -55,6 +56,7 @@ jobs:
           echo "TENSORZERO_GATEWAY_URL=http://gateway:3000" >> fixtures/.env
           echo "TENSORZERO_GATEWAY_TAG=sha-${{ github.sha }}" >> fixtures/.env
           echo "TENSORZERO_UI_TAG=sha-${{ github.sha }}" >> fixtures/.env
+          echo "TENSORZERO_MOCK_INFERENCE_PROVIDER_TAG=sha-${{ github.sha }}" >> fixtures/.env
           echo "TENSORZERO_GATEWAY_CONFIG=/app/config/empty.toml" >> fixtures/.env
           echo "TENSORZERO_UI_CONFIG_PATH=/app/config/empty.toml" >> fixtures/.env
 
@@ -97,16 +99,17 @@ jobs:
           pattern: build-*-container
           merge-multiple: true
 
-      - name: Load `gateway` and `ui` containers
+      - name: Load `gateway`, `ui`, and `mock-inference-provider` containers
         run: |
           docker load < gateway-container.tar
           docker load < ui-container.tar
+          docker load < mock-inference-provider-container.tar
 
       # This allows us to use 'no-build' on subsequent steps
       - name: Build needed docker images
         working-directory: ui
         run: |
-          docker compose -f fixtures/docker-compose.e2e.yml -f fixtures/docker-compose.ui.yml build fixtures mock-inference-provider
+          docker compose -f fixtures/docker-compose.e2e.yml -f fixtures/docker-compose.ui.yml build fixtures
 
       - name: Start Docker containers and apply fixtures
         working-directory: ui
@@ -127,6 +130,7 @@ jobs:
           echo "TENSORZERO_UI_CONFIG_PATH=/app/config/tensorzero.base-path.toml" >> fixtures/.env
           echo "TENSORZERO_GATEWAY_TAG=sha-${{ github.sha }}" >> fixtures/.env
           echo "TENSORZERO_UI_TAG=sha-${{ github.sha }}" >> fixtures/.env
+          echo "TENSORZERO_MOCK_INFERENCE_PROVIDER_TAG=sha-${{ github.sha }}" >> fixtures/.env
           export TENSORZERO_SKIP_LARGE_FIXTURES=1
           docker compose -f fixtures/docker-compose.e2e.yml -f fixtures/docker-compose.ui.yml up --no-build -d
           docker compose -f fixtures/docker-compose.e2e.yml -f fixtures/docker-compose.ui.yml wait fixtures
@@ -197,10 +201,11 @@ jobs:
           pattern: build-*-container
           merge-multiple: true
 
-      - name: Load `gateway` and `ui` containers
+      - name: Load `gateway`, `ui`, and `mock-inference-provider` containers
         run: |
           docker load < gateway-container.tar
           docker load < ui-container.tar
+          docker load < mock-inference-provider-container.tar
 
       - name: Set common fixture environment variables
         working-directory: ui
@@ -210,6 +215,7 @@ jobs:
           echo "TENSORZERO_GATEWAY_URL=http://gateway:3000" >> fixtures/.env
           echo "TENSORZERO_GATEWAY_TAG=sha-${{ github.sha }}" >> fixtures/.env
           echo "TENSORZERO_UI_TAG=sha-${{ github.sha }}" >> fixtures/.env
+          echo "TENSORZERO_MOCK_INFERENCE_PROVIDER_TAG=sha-${{ github.sha }}" >> fixtures/.env
           # We need these set in the ui container, so that we construct the correct optimizer config
           # to pass to 'experimentalLaunchOptimizationWorkflow'
           echo "FIREWORKS_BASE_URL=http://mock-inference-provider:3030/fireworks/" >> fixtures/.env
