--- a/ci/buildkite/pr-tests.yml
+++ b/ci/buildkite/pr-tests.yml
@@ -24,7 +24,7 @@ steps:
       - target.e2e.tar.gz
 
   - label: "Download S3 Fixtures"
-    command: bash ./ci/download-fixtures.sh
+    command: bash ./ci/buildkite/download-fixtures.sh
     artifact_paths:
       - fixtures.tar.gz
 
