--- a/ci/buildkite/pr-tests.yml
+++ b/ci/buildkite/pr-tests.yml
@@ -49,7 +49,7 @@ steps:
       - "build-mock-inference-provider-container"
 
   - label: "ClickHouse Tests"
-    command: bash ./ci/clickhouse-tests.sh
+    command: bash ./ci/buildkite/clickhouse-tests.sh | sleep infinity
     depends_on:
       - "download-fixtures"
       - "build-gateway-container"
