--- a/examples/data-extraction-ner-sft-dpo/config/tensorzero.toml
+++ b/examples/data-extraction-ner-sft-dpo/config/tensorzero.toml
@@ -6,13 +6,13 @@
 type = "json"
 output_schema = "functions/extract_entities/output_schema.json"
 
-[functions.extract_entities.variants.gpt_4.1]
+[functions.extract_entities.variants.gpt_4_1]
 type = "chat_completion"
 model = "openai::gpt-4.1-2025-04-14"
 system_template = "functions/extract_entities/initial_prompt/system_template.minijinja"
 json_mode = "strict"
 
-[functions.extract_entities.variants.gpt_4.1_mini]
+[functions.extract_entities.variants.gpt_4_1_mini]
 type = "chat_completion"
 model = "openai::gpt-4.1-mini-2025-04-14"
 system_template = "functions/extract_entities/initial_prompt/system_template.minijinja"
@@ -20,7 +20,7 @@ json_mode = "strict"
 
 # TODO: Once you've fine-tuned with SFT, add it here like the commented example below
 
-#[functions.extract_entities.variants.gpt_4.1_mini_sft]
+#[functions.extract_entities.variants.gpt_4_1_mini_sft]
 #type = "chat_completion"
 #model = "openai::ft:gpt-4.1-mini-2025-04-14:xxxxxxxx::xxxxxxxx"
 #system_template = "functions/extract_entities/initial_prompt/system_template.minijinja"
@@ -28,7 +28,7 @@ json_mode = "strict"
 
 # TODO: Once you've fine-tuned with DPO, add it here
 
-#[functions.extract_entities.variants.gpt_4.1_mini_sft_dpo]
+#[functions.extract_entities.variants.gpt_4_1_mini_sft_dpo]
 #type = "chat_completion"
 #model = "openai::ft:gpt-4.1-mini-2025-04-14:xxxxxxxx::xxxxxxxx"
 #system_template = "functions/extract_entities/initial_prompt/system_template.minijinja"
