--- a/internal/tensorzero-node/Cargo.toml
+++ b/internal/tensorzero-node/Cargo.toml
@@ -18,6 +18,7 @@ napi-derive = "2.12.2"
 serde.workspace = true
 serde_json.workspace = true
 url.workspace = true
+uuid.workspace = true
 tensorzero = { path = "../../clients/rust" }
 
 [build-dependencies]
