temporarily turn on merge queue buildkite tests

--- a/.github/workflows/buildkite-merge-queue.yml
+++ b/.github/workflows/buildkite-merge-queue.yml
@@ -2,8 +2,11 @@ name: Buildkite Merge Queue Tests
 run-name: "Buildkite Merge Queue Tests: ${{ github.event.pull_request.title || github.ref }}"
 
 on:
-  merge_group:
+  # merge_group:
   workflow_dispatch:
+  # Temporarily enabled on PR
+  pull_request:
+    branches: ["main"]
 
 jobs:
   unit-tests:
