--- a/.github/workflows/buildkite-test-suite.yml
+++ b/.github/workflows/buildkite-test-suite.yml
@@ -2,8 +2,11 @@ name: Buildkite Test Suite
 run-name: "Buildkite Test Suite: ${{ github.event.pull_request.title || github.ref }}"
 
 on:
-  pull_request:
-    branches: ["main"]
+  # Temporarily disabled
+  workflow_dispatch:
+
+  # pull_request:
+  #   branches: ["main"]
 
 jobs:
   unit-tests:
