--- a/.github/workflows/upgrade-tensorzero-deps.yml
+++ b/.github/workflows/upgrade-tensorzero-deps.yml
@@ -27,10 +27,11 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install uv and jq
-        run: |
-          curl -LsSf https://astral.sh/uv/0.6.17/install.sh | sh
-          sudo apt-get update && sudo apt-get install -y jq
+      - name: Install uv
+        run: curl -LsSf --retry 2 --retry-delay 10 --retry-max-time 60 https://astral.sh/uv/0.6.17/install.sh | sh
+
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
 
       - name: Wait for PyPI availability (auto-trigger only)
         if: github.event_name == 'workflow_run'
