--- a/ui/fixtures/config/tensorzero.e2e.toml
+++ b/ui/fixtures/config/tensorzero.e2e.toml
@@ -57,22 +57,26 @@ description = "Extract named entities from text"
 type = "chat_completion"
 model = "gpt-4o-mini-2024-07-18"
 system_template = "functions/extract_entities/initial_prompt/system_template.minijinja"
+retries = { num_retries = 4, max_delay_s = 10 }
 
 [functions.extract_entities.variants.gpt4o_initial_prompt]
 type = "chat_completion"
 model = "openai::gpt-4o"
 system_template = "functions/extract_entities/initial_prompt/system_template.minijinja"
+retries = { num_retries = 4, max_delay_s = 10 }
 
 [functions.extract_entities.variants.llama_8b_initial_prompt]
 type = "chat_completion"
 model = "llama-3.1-8b-instruct"
 system_template = "functions/extract_entities/initial_prompt/system_template.minijinja"
+retries = { num_retries = 4, max_delay_s = 10 }
 
 [functions.extract_entities.variants.baseline]
 type = "chat_completion"
 model = "gpt-4o-mini-2024-07-18"
 system_template = "functions/extract_entities/baseline/system_template.minijinja"
 json_mode = "strict"
+retries = { num_retries = 4, max_delay_s = 10 }
 
 [functions.extract_entities.variants.dicl]
 type = "experimental_dynamic_in_context_learning"
@@ -82,11 +86,13 @@ k = 10
 system_instructions = "functions/extract_entities/baseline/system_template.minijinja"
 json_mode = "strict"
 weight = 1
+retries = { num_retries = 4, max_delay_s = 10 }
 
 [functions.extract_entities.variants.turbo]
 type = "chat_completion"
 model = "ft:gpt-4o-mini-2024-07-18:tensorzero::ALHEaw1j"
 system_template = "functions/extract_entities/baseline/system_template.minijinja"
+retries = { num_retries = 4, max_delay_s = 10 }
 
 [functions.write_haiku]
 type = "chat"
@@ -98,18 +104,24 @@ type = "chat_completion"
 model = "gpt-4o-mini-2024-07-18"
 system_template = "functions/write_haiku/initial_prompt/system_template.minijinja"
 user_template = "functions/write_haiku/initial_prompt/user_template.minijinja"
+retries = { num_retries = 4, max_delay_s = 10 }
+
 
 [functions.write_haiku.variants.initial_prompt_haiku_3_5]
 type = "chat_completion"
 model = "anthropic::claude-3-5-haiku-20241022"
 system_template = "functions/write_haiku/initial_prompt/system_template.minijinja"
 user_template = "functions/write_haiku/initial_prompt/user_template.minijinja"
+retries = { num_retries = 4, max_delay_s = 10 }
+
 
 [functions.write_haiku.variants.better_prompt_haiku_3_5]
 type = "chat_completion"
 model = "anthropic::claude-3-5-haiku-20241022"
 system_template = "functions/write_haiku/better_prompt/system_template.minijinja"
 user_template = "functions/write_haiku/better_prompt/user_template.minijinja"
+retries = { num_retries = 4, max_delay_s = 10 }
+
 
 [functions.generate_secret]
 type = "json"
@@ -121,6 +133,8 @@ type = "chat_completion"
 model = "openai::gpt-4o-mini-2024-07-18"
 system_template = "functions/generate_secret/baseline/system_template.minijinja"
 json_mode = "strict"
+retries = { num_retries = 4, max_delay_s = 10 }
+
 # for creativity
 temperature = 1.5
 
@@ -134,6 +148,8 @@ type = "chat_completion"
 weight = 1
 model = "openai::gpt-4o-mini-2024-07-18"
 system_template = "functions/ask_question/baseline/system_template.minijinja"
+retries = { num_retries = 4, max_delay_s = 10 }
+
 
 [functions.ask_question.variants."gpt-4.1-nano"]
 type = "chat_completion"
@@ -141,6 +157,8 @@ weight = 0
 model = "openai::gpt-4.1-nano-2025-04-14"
 system_template = "functions/ask_question/baseline/system_template.minijinja"
 json_mode = "strict"
+retries = { num_retries = 4, max_delay_s = 10 }
+
 
 [functions.ask_question.variants."gpt-4.1-mini"]
 type = "chat_completion"
@@ -148,6 +166,8 @@ weight = 0
 model = "openai::gpt-4.1-mini-2025-04-14"
 system_template = "functions/ask_question/baseline/system_template.minijinja"
 json_mode = "strict"
+retries = { num_retries = 4, max_delay_s = 10 }
+
 
 [functions.answer_question]
 type = "chat"
@@ -160,6 +180,7 @@ model = "openai::gpt-4o-mini-2024-07-18"
 system_template = "functions/answer_question/baseline/system_template.minijinja"
 # for honesty
 temperature = 0.5
+retries = { num_retries = 4, max_delay_s = 10 }
 
 [functions.unleash_kraken]
 type = "chat"
@@ -167,6 +188,7 @@ type = "chat"
 [functions.unleash_kraken.variants.baseline]
 type = "chat_completion"
 model = "openai::gpt-4o-mini-2024-07-18"
+retries = { num_retries = 4, max_delay_s = 10 }
 
 [functions.image_judger]
 type = "chat"
@@ -174,6 +196,7 @@ type = "chat"
 [functions.image_judger.variants.honest_answer]
 type = "chat_completion"
 model = "openai::gpt-4o-mini-2024-07-18"
+retries = { num_retries = 4, max_delay_s = 10 }
 
 [functions.multi_hop_rag_agent]
 type = "chat"
@@ -366,6 +389,7 @@ active = true
 system_instructions = "evaluations/entity_extraction/count_sports/system_instructions.txt"
 json_mode = "strict"
 temperature = 0.1
+retries = { num_retries = 4, max_delay_s = 10 }
 
 [evaluations.haiku]
 type = "static"
@@ -389,6 +413,7 @@ active = true
 system_instructions = "evaluations/haiku/topic_starts_with_f/system_instructions.txt"
 json_mode = "strict"
 temperature = 0
+retries = { num_retries = 4, max_delay_s = 10 }
 
 [evaluations.images]
 type = "static"
@@ -411,6 +436,7 @@ model = "openai::gpt-4o-mini-2024-07-18"
 system_instructions = "evaluations/images/honest_answer/system_instructions.txt"
 temperature = 0
 json_mode = "strict"
+retries = { num_retries = 4, max_delay_s = 10 }
 
 [evaluations.images.evaluators.matches_reference]
 type = "llm_judge"
@@ -426,6 +452,7 @@ model = "openai::gpt-4o-mini-2024-07-18"
 system_instructions = "evaluations/images/matches_reference/system_instructions.txt"
 temperature = 0
 json_mode = "strict"
+retries = { num_retries = 4, max_delay_s = 10 }
 
 
 # ┌────────────────────────────────────────────────────────────────────────────┐
