--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -84,8 +84,16 @@ jobs:
 
       - name: Update rust
         run: |
-          rustup update stable
-          rustup default stable
+          for attempt in {1..3}; do
+            if rustup update stable && rustup default stable; then
+              break
+            fi
+            if [ $attempt -eq 3 ]; then
+              echo "Failed to update Rust after 3 attempts"
+              exit 1
+            fi
+            sleep 10
+          done
 
       - name: Configure Namespace-powered Buildx
         uses: namespacelabs/nscloud-setup-buildx-action@84ca8c58fdf372d6a4750476cd09b7b96ee778ca
