--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -170,7 +170,8 @@ jobs:
       # We deliberately install our MSRV here (rather than 'stable') to ensure that everything compiles with that version
       - name: Install Rust 1.86.0
         run: |
-          for attempt in {1..3}; do
+          attempt=1
+          while [ $attempt -le 3 ]; do
             if rustup install 1.86.0 --component clippy,rustfmt && rustup default 1.86.0; then
               break
             fi
@@ -179,6 +180,7 @@ jobs:
               exit 1
             fi
             sleep 10
+            attempt=$((attempt + 1))
           done
 
       - name: Print Rust version
