--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -84,7 +84,8 @@ jobs:
 
       - name: Update rust
         run: |
-          for attempt in {1..3}; do
+          attempt=1
+          while [ $attempt -le 3 ]; do
             if rustup update stable && rustup default stable; then
               break
             fi
@@ -93,6 +94,7 @@ jobs:
               exit 1
             fi
             sleep 10
+            attempt=$((attempt + 1))
           done
 
       - name: Configure Namespace-powered Buildx
