--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -82,7 +82,10 @@ jobs:
       - name: Install Namespace CLI
         uses: namespacelabs/nscloud-setup@d1c625762f7c926a54bd39252efff0705fd11c64
 
-      - name: Update rust
+      - name: Cleanup disk space
+        run: ./ci/free-disk-space.sh
+
+      - name: Update Rust
         run: |
           attempt=1
           while [ $attempt -le 3 ]; do
@@ -118,7 +121,19 @@ jobs:
         run: uv run ./ui/fixtures/download-fixtures.py
 
       - name: Install pnpm
-        uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda
+        run: |
+          attempt=1
+          while [ $attempt -le 3 ]; do
+            if npm install -g pnpm@latest; then
+              break
+            fi
+            if [ $attempt -eq 3 ]; then
+              echo "Failed to install pnpm after 3 attempts"
+              exit 1
+            fi
+            sleep 10
+            attempt=$((attempt + 1))
+          done
 
       - name: Configure Namespace cache for Python (uv), and pnpm
         uses: namespacelabs/nscloud-cache-action@2f50e7d0f70475e6f59a55ba0f05eec9108e77cc
