--- a/.github/workflows/python-client-build.yml
+++ b/.github/workflows/python-client-build.yml
@@ -40,6 +40,7 @@ jobs:
             sleep 10
             attempt=$((attempt + 1))
           done
+        shell: bash
 
       - uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6
         with:
@@ -86,6 +87,7 @@ jobs:
             sleep 10
             attempt=$((attempt + 1))
           done
+        shell: bash
       - uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6
         with:
           save-if: ${{ github.ref == 'refs/heads/main' }}
@@ -134,6 +136,7 @@ jobs:
             sleep 10
             attempt=$((attempt + 1))
           done
+        shell: bash
       - uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6
         with:
           save-if: ${{ github.ref == 'refs/heads/main' }}
@@ -186,6 +189,7 @@ jobs:
             sleep 10
             attempt=$((attempt + 1))
           done
+        shell: bash
       - uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6
         with:
           save-if: ${{ github.ref == 'refs/heads/main' }}
