--- a/.github/workflows/ui-tests-e2e-model-inference-cache.yml
+++ b/.github/workflows/ui-tests-e2e-model-inference-cache.yml
@@ -56,6 +56,7 @@ jobs:
             sleep 10
             attempt=$((attempt + 1))
           done
+        shell: bash
 
       - name: Install `pnpm` dependencies
         run: pnpm install --frozen-lockfile
