Skip starting Buildkite for Dependabot PR CI
We don't have secrets available in Dependeabot PR CI, so we can't
start buildkite. The check will still run as part of the merge queue

--- a/.github/workflows/buildkite-test-suite.yml
+++ b/.github/workflows/buildkite-test-suite.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   unit-tests:
     # Run for non-PR events, or PRs where the head repo is the same as this repo (not a fork).
-    if: ${{ github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository }}
+    if: ${{ github.event_name != 'pull_request' || (github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]')}}
     runs-on: ubuntu-latest
     steps:
       - name: Trigger a Buildkite Build on Push using v2.0.0
