--- a/.github/workflows/batch-test.yml
+++ b/.github/workflows/batch-test.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           attempt=1
           while [ $attempt -le 3 ]; do
-            if rustup toolchain install stable; then
+            if rustup toolchain install stable && rustup default stable; then
               break
             fi
             if [ $attempt -eq 3 ]; then
