--- a/.github/workflows/python-client-build.yml
+++ b/.github/workflows/python-client-build.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           attempt=1
           while [ $attempt -le 3 ]; do
-            if rustup toolchain install stable --profile minimal; then
+            if rustup toolchain install stable --profile minimal && rustup default stable; then
               break
             fi
             if [ $attempt -eq 3 ]; then
@@ -77,7 +77,7 @@ jobs:
         run: |
           attempt=1
           while [ $attempt -le 3 ]; do
-            if rustup toolchain install stable --profile minimal; then
+            if rustup toolchain install stable --profile minimal && rustup default stable; then
               break
             fi
             if [ $attempt -eq 3 ]; then
@@ -126,7 +126,7 @@ jobs:
         run: |
           attempt=1
           while [ $attempt -le 3 ]; do
-            if rustup toolchain install stable --profile minimal; then
+            if rustup toolchain install stable --profile minimal && rustup default stable; then
               break
             fi
             if [ $attempt -eq 3 ]; then
@@ -179,7 +179,7 @@ jobs:
         run: |
           attempt=1
           while [ $attempt -le 3 ]; do
-            if rustup toolchain install stable --profile minimal; then
+            if rustup toolchain install stable --profile minimal && rustup default stable; then
               break
             fi
             if [ $attempt -eq 3 ]; then
