--- a/.github/workflows/caching-hack.yml
+++ b/.github/workflows/caching-hack.yml
@@ -27,8 +27,7 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
       - name: Install Rust toolchain
         run: |
-          attempt=1
-          while [ $attempt -le 3 ]; do
+          for attempt in 1 2 3; do
             if rustup toolchain install stable && rustup default stable; then
               break
             fi
@@ -37,7 +36,6 @@ jobs:
               exit 1
             fi
             sleep $((10 * attempt))
-            attempt=$((attempt + 1))
           done
         shell: bash
       - uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6
