--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -112,8 +112,7 @@ jobs:
 
       - name: Install pnpm
         run: |
-          attempt=1
-          while [ $attempt -le 3 ]; do
+          for attempt in 1 2 3; do
             if npm install -g pnpm@latest; then
               break
             fi
@@ -122,7 +121,6 @@ jobs:
               exit 1
             fi
             sleep $((10 * attempt))
-            attempt=$((attempt + 1))
           done
         shell: bash
 
@@ -155,8 +153,7 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
       - name: Install Rust toolchain
         run: |
-          attempt=1
-          while [ $attempt -le 3 ]; do
+          for attempt in 1 2 3; do
             if rustup toolchain install stable && rustup default stable; then
               break
             fi
@@ -165,7 +162,6 @@ jobs:
               exit 1
             fi
             sleep $((10 * attempt))
-            attempt=$((attempt + 1))
           done
         shell: bash
       - uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6
@@ -197,8 +193,7 @@ jobs:
       # We deliberately install our MSRV here (rather than 'stable') to ensure that everything compiles with that version
       - name: Install Rust 1.86.0
         run: |
-          attempt=1
-          while [ $attempt -le 3 ]; do
+          for attempt in 1 2 3; do
             if rustup install 1.86.0 --component clippy,rustfmt && rustup default 1.86.0; then
               break
             fi
@@ -207,7 +202,6 @@ jobs:
               exit 1
             fi
             sleep $((10 * attempt))
-            attempt=$((attempt + 1))
           done
         shell: bash
 
@@ -221,8 +215,7 @@ jobs:
 
       - name: Install pnpm
         run: |
-          attempt=1
-          while [ $attempt -le 3 ]; do
+          for attempt in 1 2 3; do
             if npm install -g pnpm@latest; then
               break
             fi
@@ -231,7 +224,6 @@ jobs:
               exit 1
             fi
             sleep $((10 * attempt))
-            attempt=$((attempt + 1))
           done
         shell: bash
 
@@ -430,8 +422,7 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
       - name: Install Rust toolchain
         run: |
-          attempt=1
-          while [ $attempt -le 3 ]; do
+          for attempt in 1 2 3; do
             if rustup toolchain install stable && rustup default stable; then
               break
             fi
@@ -440,7 +431,6 @@ jobs:
               exit 1
             fi
             sleep $((10 * attempt))
-            attempt=$((attempt + 1))
           done
         shell: bash
       - uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6
@@ -592,8 +582,7 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
       - name: Install Rust toolchain
         run: |
-          attempt=1
-          while [ $attempt -le 3 ]; do
+          for attempt in 1 2 3; do
             if rustup toolchain install stable && rustup default stable; then
               break
             fi
@@ -602,7 +591,6 @@ jobs:
               exit 1
             fi
             sleep $((10 * attempt))
-            attempt=$((attempt + 1))
           done
         shell: bash
       - uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6
