--- a/.github/workflows/ui-tests-e2e-model-inference-cache.yml
+++ b/.github/workflows/ui-tests-e2e-model-inference-cache.yml
@@ -44,8 +44,7 @@ jobs:
 
       - name: Setup `pnpm`
         run: |
-          attempt=1
-          while [ $attempt -le 3 ]; do
+          for attempt in 1 2 3; do
             if npm install -g pnpm@latest; then
               break
             fi
@@ -54,7 +53,6 @@ jobs:
               exit 1
             fi
             sleep $((10 * attempt))
-            attempt=$((attempt + 1))
           done
         shell: bash
 
