--- a/.github/workflows/ui-tests-e2e.yml
+++ b/.github/workflows/ui-tests-e2e.yml
@@ -84,8 +84,7 @@ jobs:
 
       - name: Setup `pnpm`
         run: |
-          attempt=1
-          while [ $attempt -le 3 ]; do
+          for attempt in 1 2 3; do
             if npm install -g pnpm@latest; then
               break
             fi
@@ -94,7 +93,6 @@ jobs:
               exit 1
             fi
             sleep $((10 * attempt))
-            attempt=$((attempt + 1))
           done
         shell: bash
 
@@ -197,8 +195,7 @@ jobs:
 
       - name: Setup `pnpm`
         run: |
-          attempt=1
-          while [ $attempt -le 3 ]; do
+          for attempt in 1 2 3; do
             if npm install -g pnpm@latest; then
               break
             fi
@@ -207,7 +204,6 @@ jobs:
               exit 1
             fi
             sleep $((10 * attempt))
-            attempt=$((attempt + 1))
           done
         shell: bash
 
