changed gateway->gateway-dev in Dockerfile

--- a/ui/fixtures/docker-compose.unit.yml
+++ b/ui/fixtures/docker-compose.unit.yml
@@ -21,7 +21,7 @@ services:
       timeout: 1s
 
   gateway:
-    image: tensorzero/gateway:${TENSORZERO_GATEWAY_TAG:-latest}
+    image: tensorzero/gateway-dev:${TENSORZERO_GATEWAY_TAG:-latest}
     build:
       context: ../..
       dockerfile: gateway/Dockerfile
