added a dependency on the mock inference provider

--- a/ui/fixtures/docker-compose.unit.yml
+++ b/ui/fixtures/docker-compose.unit.yml
@@ -124,3 +124,5 @@ services:
         condition: service_healthy
       clickhouse:
         condition: service_healthy
+      mock-inference-provider:
+        condition: service_healthy
